--- a/report/plots/recall.tex
+++ b/report/plots/recall.tex
@@ -3,38 +3,47 @@
 \begin{tikzpicture}
 \begin{axis}[
     xbar stacked,
-    enlargelimits=0.05,
-    legend pos=outer north east,
+    ytick=data,
+    xmin=0,
     ylabel={Classifier},
     xlabel={Recall},
     y label style={at={(axis description cs:-0.1,.5)},anchor=south},
     symbolic y coords={k-NN,MLP,SVM,k-NN/k-NN,k-NN/MLP,k-NN/SVM,MLP/k-NN,MLP/MLP,MLP/SVM,SVM/k-NN,SVM/MLP,SVM/SVM},
-    ytick=data,
-    %nodes near coords,
-    %nodes near coords align={horizontal},
+    legend pos=outer north east,
     bar width = 0.5cm,
-    xmax = 3.3,
-    y dir = reverse,
+    xmax = 4.5,
     width=1.0\textwidth,
+    y dir = reverse
     ]
-    \addplot coordinates {(0.18,k-NN) (0.34,MLP) (0.36,SVM) 
-	                  (0.18,k-NN/k-NN) (0.19,k-NN/MLP) (0.21,k-NN/SVM) 
-		          (0.28,MLP/k-NN) (0.44,MLP/MLP) (0.34,MLP/SVM) 
-		          (0.29,SVM/k-NN) (0.51,SVM/MLP) (0.36,SVM/SVM)};
-    \addplot coordinates {(0.59,k-NN) (0.67,MLP) (0.60,SVM) 
-	                  (0.57,k-NN/k-NN) (0.57,k-NN/MLP) (0.55,k-NN/SVM) 
-		          (0.53,MLP/k-NN) (0.65,MLP/MLP) (0.61,MLP/SVM) 
-		          (0.56,SVM/k-NN) (0.67,SVM/MLP) (0.60,SVM/SVM)};
-    \addplot coordinates {(0.92,k-NN) (0.95,MLP) (0.93,SVM) 
-	                  (0.90,k-NN/k-NN) (0.94,k-NN/MLP) (0.90,k-NN/SVM) 
-		          (0.89,MLP/k-NN) (0.94,MLP/MLP) (0.92,MLP/SVM) 
-		          (0.93,SVM/k-NN) (0.98,SVM/MLP) (0.93,SVM/SVM)};
 
-    \addplot [point meta = x, nodes near coords, nodes near coords align={anchor=west}] coordinates {(0.88,k-NN) (0.98,MLP) (0.95,SVM) 
-	                  (0.88,k-NN/k-NN) (0.98,k-NN/MLP) (0.97,k-NN/SVM) 
-		          (0.88,MLP/k-NN) (0.98,MLP/MLP) (0.97,MLP/SVM) 
-		          (0.88,SVM/k-NN) (0.98,SVM/MLP) (0.97,SVM/SVM)};
-    \legend{u2r,r2l,dos,probe}
+    \addplot table[
+    	x index=1,
+	y=Class,
+	col sep = comma,
+	] {data/NSLResultsRecall.csv};
+\addplot table[
+    	x index=2,
+	y=Class,
+	col sep = comma,
+	] {data/NSLResultsRecall.csv};
+\addplot table[
+    	x index=3,
+	y=Class,
+	col sep = comma,
+	] {data/NSLResultsRecall.csv};
+\addplot table[
+    	x index=4,
+	y=Class,
+	col sep = comma,
+	] {data/NSLResultsRecall.csv};
+\addplot [point meta = x, nodes near coords, nodes near coords align={anchor=west}] table[
+    	x index=5,
+	y=Class,
+	col sep = comma,
+	] {data/NSLResultsRecall.csv};
+
+
+    \legend{dos,u2r,r2l,probe, normal}
 \end{axis}
 \end{tikzpicture}
 \end{adjustbox}
